--- a/Klimik/www/index.html
+++ b/Klimik/www/index.html
@@ -5,6 +5,7 @@
     <title>jQuery Mobile page</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<script type="text/javascript" src="cordova.js"></script>
     <link rel="stylesheet" href="themes/ppk.min.css" />
     <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
